# csit-hack-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/src/: auth_utils.py  context.py  main.py
backend/src/handlers/: auth.py  course.py  group.py  task.py  webhook.py
config/: example.json
db/: init.sql
shared/: db.py  entities.py  logger.py  models.py  resources.py  routes.py
